--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "00-practice-app",
+  "name": "challenge-tracker-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
